--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,7 @@ ratatui = "0.23.0"
 [dev-dependencies]
 anyhow = "1.0.44"
 indoc = "2.0.3"
-crossterm = "0.27.0"
+crossterm = { version = "0.27.0", features = ["event-stream"] }
+futures = "0.3"
+strum = "0.25.0"
+tokio = { version = "1.16", features = ["full"] }
