chore: fix repository link (#1)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "A simple Ratatui widget for displaying big text using the font8x8 crate in a TUI (Terminal UI)."
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/joshka/tui-prompts"
+repository = "https://github.com/joshka/tui-big-text"
 authors = ["Joshka"]
 categories = ["command-line-interface", "gui"]
 keywords = ["cli", "console", "ratatui", "terminal", "tui"]
