--- a/tui-big-text/Cargo.toml
+++ b/tui-big-text/Cargo.toml
@@ -16,7 +16,9 @@ rust-version.workspace = true
 derive_builder.workspace = true
 font8x8 = "0.3.1"
 itertools.workspace = true
+rand = "0.8.5"
 ratatui-core.workspace = true
+zx-origins = { path = "../../zx-origins" }
 
 [dev-dependencies]
 color-eyre.workspace = true
