ci: add check for cargo-rdme to ensure readme is updated when lib.rs docs are (#16)
* ci: add check for cargo-rdme to ensure readme is updated when lib.rs docs are
* docs: update readme with recent change for Frame no longer being generic

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,16 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
-
+  check:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install cargo-rdme
+      uses: taiki-e/install-action@v2
+      with:
+        tool: cargo-rdme
+    - name: Check README.md is up-to-date
+      run: cargo rdme --check
   coverage:
     runs-on: ubuntu-latest
     steps:
