--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
 name = "tui-popup"
+authors = ["Joshka"]
 version = "0.1.0"
+description = "A simple popup for tui-rs"
+license = "MIT"
+repository = "https://github.com/joshka/tui-popup"
+documentation = "https://docs.rs/tui-popup"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,3 +16,4 @@ ratatui = "0.25.0"
 [dev-dependencies]
 color-eyre = "0.6.2"
 crossterm = "0.27.0"
+lipsum = "0.9.0"
