chore: typo in cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "tui-scrollview"
+version = "0.1.0"
+authors = ["Joshka"]
 description = "A simple scrollable view for Ratatui"
-license = "MIT or Apache-2.0"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/joshka/tui-scrollview"
 docs = "https://docs.rs/tui-scrollview"
-version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
