--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ edition = "2021"
 [dependencies]
 indoc = "2.0.4"
 ratatui = "0.26.0-alpha.1"
+
+[dev-dependencies]
+color-eyre = "0.6.2"
+crossterm = "0.27.0"
+lipsum = "0.9.0"
