--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,5 @@ anyhow = "1.0.44"
 indoc = "2.0.3"
 crossterm = { version = "0.27.0", features = ["event-stream"] }
 futures = "0.3"
-strum = "0.25.0"
+strum = { version = "0.26.1", features = ["derive"] }
 tokio = { version = "1.16", features = ["full"] }
