--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ keywords = ["cli", "console", "ratatui", "terminal", "tui"]
 derive_builder = "0.13.0"
 font8x8 = "0.3.1"
 itertools = "0.12.0"
-ratatui = "0.25.0"
+ratatui = ">=0.25.0"
 
 [dev-dependencies]
 anyhow = "1.0.44"
@@ -22,3 +22,4 @@ crossterm = { version = "0.27.0", features = ["event-stream"] }
 futures = "0.3"
 strum = { version = "0.26.1", features = ["derive"] }
 tokio = { version = "1.16", features = ["full"] }
+ratatui = "0.26.0"
