--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,14 @@ keywords = ["cli", "console", "ratatui", "terminal", "tui"]
 [dependencies]
 derive_builder = "0.13.0"
 font8x8 = "0.3.1"
-itertools = "0.12.0"
-ratatui = ">=0.25.0"
+itertools = ">=0.12.0"
+ratatui = ">=0.25.0" # should be compatible with any version of ratatui past this one
 
 [dev-dependencies]
 anyhow = "1.0.44"
-indoc = "2.0.3"
 crossterm = { version = "0.27.0", features = ["event-stream"] }
 futures = "0.3"
+indoc = "2.0.3"
+ratatui = "0.26.0" # demo uses features introduced in 0.26.0
 strum = { version = "0.26.1", features = ["derive"] }
 tokio = { version = "1.16", features = ["full"] }
-ratatui = "0.26.0"
