--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 
 [dependencies]
 indoc = "2.0.4"
-ratatui = "0.26.0-alpha.3"
+ratatui = "0.26.0"
 
 [dev-dependencies]
 color-eyre = "0.6.2"
