--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,8 @@ rstest = "0.19.0"
 color-eyre = "0.6.3"
 crossterm = "0.27.0"
 lipsum = "0.9.1"
+
+
+[[example]]
+name = "tabs"
+required-features = ["ratatui/unstable-widget-ref"]
