--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,3 +8,5 @@ jobs:
     permissions:
       checks: write
     uses: joshka/github-workflows/.github/workflows/rust-check.yml@main
+    with:
+      msrv: 1.74.0
