feat(mouse): add PopupState::handle_mouse_event() (#29)
Converts a crossterm mouse event into mouse movement. Requires the
`crossterm` feature to be enabled.

```rust
if let Event::Mouse(event) = event::read()? {
    popup_state.handle_mouse_event(event);
}
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,20 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[package.metadata.docs.rs]
+all-features = true
+# see https://doc.rust-lang.org/nightly/rustdoc/scraped-examples.html
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
+rustdoc-args = ["--cfg", "docsrs"]
+
+[features]
+default = []
+
+## Enables processing crossterm mouse events using [`PopupState::handle_mouse_event`]
+crossterm = ["ratatui/crossterm"]
+
 [dependencies]
+document-features = "0.2.0"
 derive-getters = "0.4.0"
 derive_setters = "0.1.6"
 ratatui = { version = "0.27.0", features = ["unstable-widget-ref"] }
@@ -24,3 +37,8 @@ pedantic = { level = "warn", priority = -1 }
 nursery = { level = "warn", priority = -1 }
 unwrap_used = "warn"
 expect_used = "warn"
+
+[[example]]
+name = "state"
+required-features = ["crossterm"]
+doc-scrape-examples = true        # applies to all examples, not just this one
