--- a/tui-big-text/Cargo.toml
+++ b/tui-big-text/Cargo.toml
@@ -1,26 +1,27 @@
 [package]
 name = "tui-big-text"
 version = "0.4.5"
-edition = "2021"
-description = "A simple Ratatui widget for displaying big text using the font8x8 crate in a TUI (Terminal UI)."
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/joshka/tui-big-text"
+description = "A Ratatui widget for displaying big text in the terminal"
 documentation = "https://docs.rs/tui-big-text"
-authors = ["Joshka"]
-categories = ["command-line-interface", "gui"]
-keywords = ["cli", "console", "ratatui", "terminal", "tui"]
-rust-version = "1.74.0"
+
+authors.workspace = true
+categories.workspace = true
+edition.workspace = true
+keywords.workspace = true
+license.workspace = true
+repository.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-derive_builder = "0.20.0"
+derive_builder.workspace = true
 font8x8 = "0.3.1"
-itertools = "0.13.0"
-ratatui = "0.27.0"
+itertools.workspace = true
+ratatui.workspace = true
 
 [dev-dependencies]
-anyhow = "1.0.44"
-crossterm = { version = "0.27.0", features = ["event-stream"] }
-futures = "0.3"
-indoc = "2.0.3"
-strum = { version = "0.26.1", features = ["derive"] }
-tokio = { version = "1.16", features = ["full"] }
+anyhow.workspace = true
+crossterm = { workspace = true, features = ["event-stream"] }
+futures.workspace = true
+indoc.workspace = true
+strum.workspace = true
+tokio = { workspace = true, features = ["full"] }
