--- a/tui-scrollview/Cargo.toml
+++ b/tui-scrollview/Cargo.toml
@@ -10,13 +10,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-indoc = "2.0.5"
-ratatui = "0.27.0"
-rstest = "0.21.0"
+indoc.workspace = true
+ratatui.workspace = true
+rstest.workspace = true
 
 [dev-dependencies]
-color-eyre = "0.6.3"
-crossterm = "0.27.0"
+color-eyre.workspace = true
+ratatui = { workspace = true, features = ["crossterm"] }
 lipsum = "0.9.1"
 
 
