--- a/bacon.toml
+++ b/bacon.toml
@@ -23,7 +23,15 @@ command = [
 need_stdout = false
 
 [jobs.clippy]
-command = ["cargo", "clippy", "--all-targets", "--color", "always"]
+command = [
+    "cargo",
+    "clippy",
+    "--workspace",
+    "--all-features",
+    "--all-targets",
+    "--color",
+    "always",
+]
 need_stdout = false
 
 [jobs.test]
@@ -48,7 +56,7 @@ need_stdout = false
 [jobs.doc-open]
 command = ["cargo", "doc", "--color", "always", "--no-deps", "--open"]
 need_stdout = false
-on_success = "back"                                                    # so that we don't open the browser at each change
+on_success = "job:doc"                                                 # so that we don't open the browser at each change
 
 # You can run your application and have the result displayed in bacon,
 # *if* it makes sense for this crate. You can run an example the same
@@ -65,9 +73,35 @@ command = [
 need_stdout = true
 allow_warnings = true
 
+[jobs.coverage]
+command = [
+    "cargo",
+    "llvm-cov",
+    "--workspace",
+    "--lcov",
+    "--output-path",
+    "target/lcov.info",
+    "--color",
+    "always",
+]
+
+[jobs.format]
+command = ["cargo", "+nightly", "fmt", "--", "--check"]
+
+[jobs.rdme]
+command = ["cargo", "rdme", "--force"]
+need_stdout = true
+
+[jobs.vhs]
+command = ["vhs", "tui-prompts/examples/text.tape"]
+need_stdout = true
+
 # You may define here keybindings that would be specific to
 # a project, for example a shortcut to launch a specific job.
 # Shortcuts to internal functions (scrolling, toggling, etc.)
 # should go in your personal global prefs.toml file instead.
 [keybindings]
-# alt-m = "job:my-job"
+shift-r = "job:rdme"
+f = "job:format"
+o = "job:coverage"
+v = "job:vhs"
