--- a/tui-popup/Cargo.toml
+++ b/tui-popup/Cargo.toml
@@ -41,6 +41,14 @@ unwrap_used = "warn"
 expect_used = "warn"
 
 [[example]]
-name = "state"
+name = "paragraph"
 required-features = ["crossterm"]
 doc-scrape-examples = true        # applies to all examples, not just this one
+
+[[example]]
+name = "popup"
+required-features = ["crossterm"]
+
+[[example]]
+name = "state"
+required-features = ["crossterm"]
