--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ futures = "0.3.21"
 itertools = "0.13.0"
 indoc = "2.0.5"
 lipsum = "0.9.1"
-ratatui = { version = "0.27.0", default-features = false }
+ratatui = { version = "0.28" }
 ratatui-macros = "0.4.2"
 rstest = "0.22.0"
 strum = { version = "0.26.1", features = ["derive"] }
