chore: add ratatui 0.28 specific changes
- Frame::size() has been replaced with Frame::area()
- Buffer index supports `Into<Position>`
- Put back the `default-features = false` for ratatui in Cargo.toml
  (this makes it possible to use the widgets on other backends than
  except tui-prompts which requires crossterm)

--- a/tui-prompts/Cargo.toml
+++ b/tui-prompts/Cargo.toml
@@ -15,7 +15,7 @@ rust-version.workspace = true
 
 [dependencies]
 itertools.workspace = true
-ratatui.workspace = true
+ratatui = { workspace = true, features = ["crossterm"] }
 ratatui-macros.workspace = true
 rstest.workspace = true
 
