--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ clap = { version = "4.5.8", features = ["derive"] }
 color-eyre = "0.6.3"
 crossterm = { version = "0.28.1" }
 derive_builder = "0.20.0"
-derive-getters = "0.4.0"
+derive-getters = "0.5.0"
 derive_setters = "0.1.6"
 document-features = "0.2.10"
 futures = "0.3.21"
@@ -24,16 +24,16 @@ itertools = "0.13.0"
 indoc = "2.0.5"
 lipsum = "0.9.1"
 ratatui = { version = "0.28", default-features = false }
-ratatui-macros = "0.4.2"
+ratatui-macros = "0.4.4"
 rstest = "0.22.0"
-strum = { version = "0.26.1", features = ["derive"] }
+strum = { version = "0.26.3", features = ["derive"] }
 tokio = { version = "1.39" }
 
 [lints.rust]
 unused = "warn"
 
 [lints.clippy]
-# cargo = "warn"    # currently fails because crossterm 0.27.0 uses multiple windows crate versions
+cargo = "warn"    # when this fails, investigate and disable the lint if needed, noting the reason
 pedantic = "warn"
 nursery = "warn"
 
