feat(cards): add new tui-cards library for playing cards

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ futures = "0.3.21"
 itertools = "0.13.0"
 indoc = "2.0.5"
 lipsum = "0.9.1"
-ratatui = { version = "0.28", default-features = false }
+ratatui = { version = "0.28.1", default-features = false }
 ratatui-macros = "0.5.0"
 rstest = "0.22.0"
 strum = { version = "0.26.3", features = ["derive"] }
@@ -64,11 +64,17 @@ popup = ["tui-popup"]
 prompts = ["tui-prompts"]
 ## Enables the [`scrollview`] widget
 scrollview = ["tui-scrollview"]
+## Enables the [`cards`] widget
+cards = ["tui-cards"]
 
 [dependencies]
 document-features.workspace = true
 ratatui = { workspace = true }
 tui-big-text = { version = "0.6.0", path = "tui-big-text", optional = true }
+tui-cards = { version = "0.1.0", path = "tui-cards", optional = true }
 tui-popup = { version = "0.5.0", path = "tui-popup", optional = true }
 tui-prompts = { version = "0.4.0", path = "tui-prompts", optional = true }
 tui-scrollview = { version = "0.4.0", path = "tui-scrollview", optional = true }
+
+[patch.crates-io]
+ratatui = { path = "../ratatui" }
