--- a/cliff.toml
+++ b/cliff.toml
@@ -43,7 +43,7 @@ body = """
 trim = true
 # postprocessors
 postprocessors = [
-  { pattern = '<REPO>', replace = "https://github.com/joshka/tui-scollview" }, # replace repository URL
+  { pattern = '<REPO>', replace = "https://github.com/joshka/tui-widgets" }, # replace repository URL
   { pattern = ' +\n', replace = "\n" },
 ]
 
