--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,8 @@ futures = "0.3.31"
 itertools = "0.13.0"
 indoc = "2.0.5"
 lipsum = "0.9.1"
-ratatui = { version = ">=0.28", default-features = false }  # Currently compatible with 0.28 and 0.29
-ratatui-macros = "0.5.0"
+ratatui = { version = "0.29.0", default-features = false }
+ratatui-macros = "0.6.0"
 rstest = "0.23.0"
 strum = { version = "0.26.3", features = ["derive"] }
 tokio = { version = "1.41.0" }
@@ -41,7 +41,7 @@ nursery = "warn"
 [package]
 name = "tui-widgets"
 description = "A collection of useful widgets for building terminal user interfaces using Ratatui"
-version = "0.3.1"
+version = "0.4.0"
 documentation = "https://docs.rs/tui-widgets"
 
 authors.workspace = true
@@ -70,8 +70,8 @@ cards = ["tui-cards"]
 [dependencies]
 document-features.workspace = true
 ratatui = { workspace = true }
-tui-big-text = { version = "0.6.1", path = "tui-big-text", optional = true }
-tui-cards = { version = "0.1.0", path = "tui-cards", optional = true }
-tui-popup = { version = "0.5.1", path = "tui-popup", optional = true }
-tui-prompts = { version = "0.4.1", path = "tui-prompts", optional = true }
-tui-scrollview = { version = "0.4.1", path = "tui-scrollview", optional = true }
+tui-big-text = { version = "0.7.0", path = "tui-big-text", optional = true }
+tui-cards = { version = "0.2.0", path = "tui-cards", optional = true }
+tui-popup = { version = "0.6.0", path = "tui-popup", optional = true }
+tui-prompts = { version = "0.5.0", path = "tui-prompts", optional = true }
+tui-scrollview = { version = "0.5.0", path = "tui-scrollview", optional = true }
