--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ itertools = "0.13.0"
 indoc = "2.0.5"
 lipsum = "0.9.1"
 ratatui = { version = "0.30.0-alpha.0", default-features = false }
+ratatui-core = { version = "0.1.0-alpha.0" }
 ratatui-macros = "0.7.0-alpha.0"
 rstest = "0.23.0"
 strum = { version = "0.26.3", features = ["derive"] }
