--- a/tui-cards/Cargo.toml
+++ b/tui-cards/Cargo.toml
@@ -17,7 +17,7 @@ keywords.workspace = true
 color-eyre.workspace = true
 indoc.workspace = true
 strum.workspace = true
-ratatui.workspace = true
+ratatui-core.workspace = true
 itertools.workspace = true
 
 [dev-dependencies]
