--- a/tui-big-text/Cargo.toml
+++ b/tui-big-text/Cargo.toml
@@ -16,7 +16,7 @@ rust-version.workspace = true
 derive_builder.workspace = true
 font8x8 = "0.3.1"
 itertools.workspace = true
-ratatui.workspace = true
+ratatui-core.workspace = true
 
 [dev-dependencies]
 color-eyre.workspace = true
