--- a/tui-scrollview/Cargo.toml
+++ b/tui-scrollview/Cargo.toml
@@ -13,7 +13,8 @@ rust-version.workspace = true
 
 [dependencies]
 indoc.workspace = true
-ratatui.workspace = true
+ratatui-core.workspace = true
+ratatui-widgets.workspace = true
 rstest.workspace = true
 
 [dev-dependencies]
