--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ futures = "0.3.31"
 itertools = "0.13.0"
 indoc = "2.0.5"
 lipsum = "0.9.1"
+pretty_assertions = "1.4.1"
 ratatui = { version = "0.30.0-alpha.0", default-features = false }
 ratatui-core = { version = "0.1.0-alpha.0" }
 ratatui-macros = "0.7.0-alpha.0"
