--- a/tui-popup/Cargo.toml
+++ b/tui-popup/Cargo.toml
@@ -28,11 +28,13 @@ crossterm = ["ratatui/crossterm"]
 document-features.workspace = true
 derive-getters.workspace = true
 derive_setters.workspace = true
+pretty_assertions.workspace = true
 ratatui = { workspace = true, features = ["unstable-widget-ref"] }
 
 [dev-dependencies]
 color-eyre.workspace = true
 lipsum.workspace = true
+rstest.workspace = true
 
 [lints.clippy]
 pedantic = { level = "warn", priority = -1 }
