--- a/tui-popup/Cargo.toml
+++ b/tui-popup/Cargo.toml
@@ -31,6 +31,7 @@ derive_setters.workspace = true
 ratatui = { workspace = true, features = ["unstable-widget-ref"] }
 
 [dev-dependencies]
+pretty_assertions.workspace = true
 color-eyre.workspace = true
 lipsum.workspace = true
 
