chore: Make ratatui optional on tui-popups
Rely on ratatui-core types mainly except for the interaction with
crossterm.

This change is a bit breaking, as it requires the widget passed in
to tui-popup to implement Clone. I can't find a clean way to replace
this otherwise such that this call works:
<https://github.com/joshka/tui-widgets/blob/83e45dbb31566ade6b323d05820c711561a1a46c/tui-popup/src/popup.rs#L147>

--- a/tui-popup/Cargo.toml
+++ b/tui-popup/Cargo.toml
@@ -28,7 +28,9 @@ crossterm = ["ratatui/crossterm"]
 document-features.workspace = true
 derive-getters.workspace = true
 derive_setters.workspace = true
-ratatui = { workspace = true, features = ["unstable-widget-ref"] }
+ratatui = { workspace = true, features = ["unstable-widget-ref"], optional = true }
+ratatui-core.workspace = true
+ratatui-widgets.workspace = true
 
 [dev-dependencies]
 pretty_assertions.workspace = true
