chore: revert ratatui-0.30 changes
Putting main back to tracking the release version of ratatui so that I can release changes to widgets

--- a/tui-box-text/Cargo.toml
+++ b/tui-box-text/Cargo.toml
@@ -13,7 +13,7 @@ keywords.workspace = true
 [dependencies]
 color-eyre.workspace = true
 indoc.workspace = true
-ratatui-core.workspace = true
+ratatui = { workspace = true, default-features = true }
 
 [dev-dependencies]
 ratatui = { workspace = true, default-features = true }
