--- a/tui-cards/Cargo.toml
+++ b/tui-cards/Cargo.toml
@@ -17,8 +17,8 @@ keywords.workspace = true
 color-eyre.workspace = true
 indoc.workspace = true
 strum.workspace = true
-ratatui-core.workspace = true
 itertools.workspace = true
+ratatui = { workspace = true }
 
 [dev-dependencies]
 ratatui = { workspace = true, default-features = true }
