--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,13 @@ derive-getters = "0.5.0"
 derive_setters = "0.1.6"
 document-features = "0.2.10"
 futures = "0.3.31"
-itertools = "0.13.0"
+itertools = "0.14.0"
 indoc = "2.0.5"
 lipsum = "0.9.1"
 pretty_assertions = "1.4.1"
-ratatui = { version = "0.30.0-alpha.0", default-features = false }
-ratatui-core = { version = "0.1.0-alpha.0" }
-ratatui-macros = "0.7.0-alpha.0"
-ratatui-widgets = { version = "0.3.0-alpha.0" }
-rstest = "0.23.0"
+ratatui = { version = "0.29.0", default-features = false }
+ratatui-macros = "0.6.0"
+rstest = "0.24.0"
 strum = { version = "0.26.3", features = ["derive"] }
 tokio = { version = "1.41.0" }
 
