--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,5 @@
+# see https://release-plz.ieni.dev/docs/github for more information
+
 name: Release
 
 permissions:
@@ -5,15 +7,22 @@ permissions:
   contents: write
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+  workflow_call:
+    secrets:
+      CARGO_REGISTRY_TOKEN:
+        description: "Token to publish to crates.io"
+        required: true
+
 jobs:
   release-plz:
-    uses: joshka/github-workflows/.github/workflows/rust-release-plz.yml@main
-    permissions:
-      pull-requests: write
-      contents: write
-    secrets:
-      CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+    name: Release-plz
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: MarcoIeni/release-plz-action@v0.5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
