feat: Implement interactive popup dragging and resizing
This commit introduces interactive dragging and resizing functionality to the `tui-popup` crate.

Changes include:

- Added an `interactive` example demonstrating the new features.
- Updated `PopupState` to manage interaction state (dragging and resizing).
- Modified `Popup` widget to render a resize handle.
- Implemented mouse event handling for dragging and resizing.
- Added constraints to keep the popup within terminal bounds and enforce minimum size.

These changes allow users to interactively reposition and resize popups within the terminal, improving the user experience.

--- a/tui-popup/Cargo.toml
+++ b/tui-popup/Cargo.toml
@@ -53,3 +53,7 @@ required-features = ["crossterm"]
 [[example]]
 name = "state"
 required-features = ["crossterm"]
+
+[[example]]
+name = "interactive"
+required-features = ["crossterm"]
