--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ itertools = "0.14.0"
 indoc = "2.0.5"
 lipsum = "0.9.1"
 pretty_assertions = "1.4.1"
-ratatui = { version = "0.29.0", default-features = false }
+ratatui = { version = "0.30.0-alpha", default-features = false }
 ratatui-macros = "0.6.0"
 rstest = "0.24.0"
 strum = { version = "0.27.0", features = ["derive"] }
