--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,10 @@ indoc = "2.0.5"
 lipsum = "0.9.1"
 pretty_assertions = "1.4.1"
 ratatui = { version = "0.30.0-alpha", default-features = false }
-ratatui-macros = "0.6.0"
+ratatui-core = "0.1.0-alpha"
+ratatui-crossterm = "0.1.0-alpha"
+ratatui-macros = "0.7.0-alpha"
+ratatui-widgets = "0.3.0-alpha"
 rstest = "0.24.0"
 strum = { version = "0.27.0", features = ["derive"] }
 tokio = { version = "1.41.0" }
@@ -83,7 +86,6 @@ scrollview = ["tui-scrollview"]
 
 [dependencies]
 document-features.workspace = true
-ratatui = { workspace = true }
 tui-big-text = { version = "0.7.0", path = "tui-big-text", optional = true }
 tui-box-text = { version = "0.2.0", path = "tui-box-text", optional = true }
 tui-cards = { version = "0.2.0", path = "tui-cards", optional = true }
