--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -3,3 +3,5 @@ comment_width = 100
 group_imports = "StdExternalCrate"
 imports_granularity = "Crate"
 max_width = 100
+
+format_code_in_doc_comments = true
