--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ crossterm = { version = "0.28.1" }
 derive_builder = "0.20.2"
 derive-getters = "0.5.0"
 derive_setters = "0.1.6"
-document-features = "0.2.10"
+document-features = "0.2.11"
 futures = "0.3.31"
 itertools = "0.14.0"
 indoc = "2.0.5"
@@ -46,7 +46,7 @@ nursery = "warn"
 [package]
 name = "tui-widgets"
 description = "A collection of useful widgets for building terminal user interfaces using Ratatui"
-version = "0.4.1"
+version = "0.5.0-alpha.0"
 documentation = "https://docs.rs/tui-widgets"
 
 authors.workspace = true
@@ -86,10 +86,10 @@ scrollview = ["tui-scrollview"]
 
 [dependencies]
 document-features.workspace = true
-tui-big-text = { version = "0.7.0", path = "tui-big-text", optional = true }
-tui-box-text = { version = "0.2.0", path = "tui-box-text", optional = true }
-tui-cards = { version = "0.2.0", path = "tui-cards", optional = true }
-tui-popup = { version = "0.6.0", path = "tui-popup", optional = true }
-tui-prompts = { version = "0.5.0", path = "tui-prompts", optional = true }
-tui-qrcode = { version = "0.1.0", path = "tui-qrcode", optional = true }
-tui-scrollview = { version = "0.5.1", path = "tui-scrollview", optional = true }
+tui-big-text = { version = "0.8.0-alpha.0", path = "tui-big-text", optional = true }
+tui-box-text = { version = "0.3.0-alpha.0", path = "tui-box-text", optional = true }
+tui-cards = { version = "0.3.0-alpha.0", path = "tui-cards", optional = true }
+tui-popup = { version = "0.7.0-alpha.0", path = "tui-popup", optional = true }
+tui-prompts = { version = "0.6.0-alpha.0", path = "tui-prompts", optional = true }
+tui-qrcode = { version = "0.2.0-alpha.0", path = "tui-qrcode", optional = true }
+tui-scrollview = { version = "0.6.0-alpha.0", path = "tui-scrollview", optional = true }
