--- a/tui-cards/Cargo.toml
+++ b/tui-cards/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tui-cards"
-version = "0.2.2"
+version = "0.3.0-alpha.0"
 description = "A playing card widget for Ratatui"
 documentation = "https://docs.rs/tui-cards"
 
