--- a/tui-prompts/Cargo.toml
+++ b/tui-prompts/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tui-prompts"
-version = "0.5.0"
+version = "0.6.0-alpha.0"
 description = "A library for building interactive prompts for ratatui."
 
 authors.workspace = true
