--- a/tui-scrollview/Cargo.toml
+++ b/tui-scrollview/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tui-scrollview"
-version = "0.5.1"
+version = "0.6.0-alpha.0"
 description = "A simple scrollable view for Ratatui"
 
 authors.workspace = true
