--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,5 +1,6 @@
 wrap_comments = true
 comment_width = 100
+format_code_in_doc_comments = true
 group_imports = "StdExternalCrate"
 imports_granularity = "Crate"
 max_width = 100
