test: using rstest and rendering for QRCodeWidget

--- a/tui-qrcode/Cargo.toml
+++ b/tui-qrcode/Cargo.toml
@@ -18,5 +18,5 @@ qrcode = { version = "0.14.1", default-features = false }
 ratatui.workspace = true
 
 [dev-dependencies]
-pretty_assertions.workspace = true
+rstest.workspace = true
 ratatui = { workspace = true, features = ["crossterm"] }
