--- a/tui-qrcode/Cargo.toml
+++ b/tui-qrcode/Cargo.toml
@@ -18,4 +18,5 @@ qrcode = { version = "0.14.1", default-features = false }
 ratatui.workspace = true
 
 [dev-dependencies]
+rstest.workspace = true
 ratatui = { workspace = true, features = ["crossterm"] }
