--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,6 +1,12 @@
-wrap_comments = true
+# configuration for https://rust-lang.github.io/rustfmt/
+
+use_field_init_shorthand = true
+
+# unstable options
 comment_width = 100
 format_code_in_doc_comments = true
+format_macro_matchers = true
 group_imports = "StdExternalCrate"
-imports_granularity = "Crate"
-max_width = 100
+imports_granularity = "Module"
+normalize_doc_attributes = true
+wrap_comments = true
