--- a/tui-big-text/Cargo.toml
+++ b/tui-big-text/Cargo.toml
@@ -18,14 +18,11 @@ font8x8 = "0.3.1"
 itertools.workspace = true
 ratatui.workspace = true
 
-[features]
-default = ["crossterm"]
-crossterm = ["ratatui/crossterm"]
-
 [dev-dependencies]
 color-eyre.workspace = true
 crossterm = { workspace = true, features = ["event-stream"] }
 futures.workspace = true
 indoc.workspace = true
+ratatui = { workspace = true, features = ["crossterm"] }
 strum.workspace = true
 tokio = { workspace = true, features = ["full"] }
