chore: use semver compatible dependency versions
Use 0.x and x.y instead of 0.x.y and x.y.z for deps to reduce incompatibilities

--- a/tui-scrollview/Cargo.toml
+++ b/tui-scrollview/Cargo.toml
@@ -19,7 +19,7 @@ ratatui = { workspace = true }
 color-eyre.workspace = true
 rstest.workspace = true
 ratatui = { workspace = true, features = ["crossterm"] }
-lipsum = "0.9.1"
+lipsum.workspace = true
 
 
 [[example]]
