--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,22 +15,24 @@ keywords = ["cli", "console", "ratatui", "terminal", "tui"]
 [workspace.dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
 color-eyre = "0.6.3"
-crossterm = { version = "0.28.1" }
-derive_builder = "0.20.2"
-derive-getters = "0.5.0"
-derive_setters = "0.1.6"
-document-features = "0.2.10"
-futures = "0.3.31"
-itertools = "0.14.0"
-indoc = "2.0.5"
-lipsum = "0.9.1"
-pretty_assertions = "1.4.1"
-rand = "0.9.0"
-ratatui = { version = "0.29.0", default-features = false }
-ratatui-macros = "0.6.0"
-rstest = "0.25.0"
-strum = { version = "0.27.0", features = ["derive"] }
-tokio = { version = "1.41.0" }
+# note that currently, the crossterm version must match the one used by ratatui. This will be fixed
+# in Ratatui 0.30
+crossterm = { version = "0.28" }
+derive_builder = "0.20"
+derive-getters = "0.5"
+derive_setters = "0.1"
+document-features = "0.2"
+futures = "0.3"
+itertools = "0.14"
+indoc = "2"
+lipsum = "0.9"
+pretty_assertions = "1.4"
+rand = "0.9"
+ratatui = { version = "0.29", default-features = false }
+ratatui-macros = "0.6"
+rstest = "0.25"
+strum = { version = "0.27", features = ["derive"] }
+tokio = { version = "1.45" }
 
 [lints.rust]
 unused = "warn"
