feat!: migrate to ratatui 0.30
- Update workspace deps to ratatui 0.30, ratatui-core, ratatui-widgets, crossterm 0.29
- Shift widget crates to ratatui-core/ratatui-widgets imports where needed
- Update tui-popup/tui-prompts event handling to use crossterm types
- Adjust tui-popup rendering, wrapper behavior, and docs for WidgetRef removal
- Add rolling breaking changes doc and markdownlint config

BREAKING CHANGE: See https://github.com/joshka/tui-widgets/blob/main/BREAKING_CHANGES.md

--- a/tui-bar-graph/Cargo.toml
+++ b/tui-bar-graph/Cargo.toml
@@ -12,8 +12,8 @@ categories.workspace = true
 keywords.workspace = true
 
 [dependencies]
-colorgrad = { version = "0.7.1" }
-ratatui.workspace = true
+colorgrad = { version = "0.8.0", features = ["preset"] }
+ratatui-core.workspace = true
 strum.workspace = true
 
 [dev-dependencies]
