--- a/tui-prompts/Cargo.toml
+++ b/tui-prompts/Cargo.toml
@@ -14,13 +14,16 @@ rust-version.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossterm.workspace = true
 itertools.workspace = true
-ratatui = { workspace = true, features = ["crossterm"] }
+ratatui-core.workspace = true
+ratatui-widgets.workspace = true
 ratatui-macros.workspace = true
-unicode-width = "0.2.0"
+unicode-width = "0.2.2"
 
 [dev-dependencies]
 clap.workspace = true
 color-eyre.workspace = true
 indoc.workspace = true
+ratatui = { workspace = true, default-features = true }
 rstest.workspace = true
