--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -35,6 +35,19 @@ jobs:
     name: Release-plz PR
     if: ${{ github.repository_owner == 'joshka' }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        package:
+          - tui-widgets
+          - tui-bar-graph
+          - tui-big-text
+          - tui-box-text
+          - tui-cards
+          - tui-popup
+          - tui-prompts
+          - tui-qrcode
+          - tui-scrollview
     permissions:
       contents: write
       pull-requests: write
@@ -44,9 +57,16 @@ jobs:
     steps:
       - *checkout
       - *install-rust
-      - name: Run release-plz (release-pr)
-        uses: release-plz/action@v0.5
+      - name: Install release-plz
+        uses: taiki-e/install-action@v2
         with:
-          command: release-pr
+          tool: release-plz@0.3.150,cargo-semver-checks@0.45
+      - name: Run release-plz (release-pr)
+        run: >
+          release-plz release-pr
+          --git-token "${{ secrets.GITHUB_TOKEN }}"
+          --repo-url "https://github.com/${{ github.repository }}"
+          --package "${{ matrix.package }}"
+          --config release-plz.toml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
