ci: fix release-plz matrix concurrency
Avoid matrix jobs canceling each other by including the package name in the
concurrency group.

--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -39,7 +39,7 @@ jobs:
       contents: write
       pull-requests: write
     concurrency:
-      group: release-plz-${{ github.ref }}
+      group: release-plz-${{ github.ref }}-${{ matrix.package }}
       cancel-in-progress: false
     steps:
       - *checkout
