--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -52,7 +52,7 @@ jobs:
       contents: write
       pull-requests: write
     concurrency:
-      group: release-plz-${{ github.ref }}
+      group: release-plz-${{ github.ref }}-${{ matrix.package }}
       cancel-in-progress: false
     steps:
       - *checkout
